# bookshop-flow

./: README.md  docker-compose.yml  index.html  tables.md
bookshop_backend/: .gitignore  README.md  alembic.ini  pyproject.toml  seed_superadmin.py  test.py  test_purchase_order_utils.py
bookshop_backend/app/: main.py
bookshop_backend/app/db/: __init__.py  base.py  session.py
bookshop_backend/app/middleware/: auth.py  auth_middleware.py
bookshop_backend/app/models/: book.py  publisher.py  sale.py  sale_item.py
bookshop_backend/app/modules/: __init__.py
bookshop_backend/app/utils/: auth.py  password_manager.py  redis_client.py  result.py  tokens.py
bookshop_backend/migrations/: env.py
bookshop_backend/migrations/versions/: 05f423df6b8d_update_book_edition_with_isbn_number_.py  06698a9ae896_add_contact_person_field_to_suppliers_.py  0f3feec45c92_update_supplier_table_with_.py  169974515f8c_merge_multiple_heads.py  1f32060c8afc_update_user_column_password_hash_to_.py  2e399d4a99e6_merge_all_heads.py  37bddc6f271a_update_user_table_add_role_property_and_.py  3bcff576612e_add_superadmin_table.py  4272a37dbb38_add_effective_date_field_to_tax_rates_.py  4b733b5be783_added_username_column_in_table_users.py  4d25068cd499_sync_user_model_with_database.py  5303139b1907_remove_relatioship_btw_tenant_and_books.py  60a3d9ecea8e_add_profit_discount_columns_and_.py  7b85772c9fdf_create_all_missing_tables.py  8261c503b92c_drop_publisher_table_and_add_new_.py  862e4d3eaced_implement_new_inventory_schema_with_.py  8ca88c0ea56b_initial_migrations.py  (+15 more)
frontend/: README.md  (+1 more)
(+168 files in other folders)
