[project]
name = "bookshop-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "bcrypt>=4.0.0",
    "fastapi-cache2>=0.2.2",
    "fastapi[standard]>=0.116.0",
    "jwt>=1.4.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "redis>=6.3.0",
    "sqlmodel>=0.0.24",
]
